--- a/img_trans/scripts/Config/Config.json
+++ b/img_trans/scripts/Config/Config.json
@@ -1,6 +1,7 @@
 {
     "Publisher":{
         "Enable":  "True",
-        "Image Size": "512 512"
+        "Image Size": "512 512",
+        "Rate": "10"
     }
 }
